manifests/apps/alcaris-develop-gateway/velocity/stateful-set.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: velocity
  labels:
    app: velocity
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: velocity
  template:
    metadata:
      labels:
        app: velocity
    spec:
      containers:
        - name: velocity
          image: itzg/mc-proxy:java21
          resources:
            requests:
              memory: 512Mi
          ports:
            - name: velocity
              containerPort: 25577
          startupProbe:
            tcpSocket:
              port: 25577
            failureThreshold: 6
            periodSeconds: 20
          volumeMounts:
            - name: gateway-config-velocity
              mountPath: /config/velocity.toml
              subPath: velocity.toml
            - name: gateway-config-velocity
              mountPath: /config/forwarding.secret
              subPath: forwarding.secret
              
            - name: gateway-config-plugins
              mountPath: /plugins/velocitab/config.yml
              subPath: velocitab-config.yml
            - name: gateway-config-plugins
              mountPath: /plugins/velocitab/tab_groups.yml
              subPath: velocitab-tab_groups.yml
            - name: gateway-config-plugins
              mountPath: /plugins/rocketjoin/config.yml
              subPath: rocketjoin-config.yml
      volumes:
        - name: gateway-config-velocity
          configMap:
            name: gateway-config-velocity
        - name: gateway-config-plugins
          configMap:
            name: gateway-config-plugins
