manifests/apps/alcaris-develop-gateway/velocity/velocity.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: velocity
  name: velocity
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: velocity
  template:
    metadata:
      labels:
        app: velocity
    spec:
      containers:
        - name: velocity
          image: itzg/mc-proxy:java21
          ports:
            - name: velocity
              containerPort: 25577
          startupProbe:
            tcpSocket:
              port: 25577
            failureThreshold: 6
            periodSeconds: 20
          volumeMounts:
            - name: velocity-config
              mountPath: /config/velocity.toml
              subPath: velocity.toml
      volumes:
        - name: velocity-config
          configMap:
            name: velocity-config
