manifests/apps/alcaris-develop-gateway/velocity/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: velocity
spec:
  type: LoadBalancer
  loadBalancerClass: io.cilium/bgp-control-plane
  loadBalancerIP: 192.168.0.230
  ports:
    - name: velocity
      port: 25565
      protocol: TCP
      targetPort: velocity
  selector:
    app: velocity
