manifests/apps/alcaris-develop-gateway/velocity/velocity-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: velocity
spec:
  type: LoadBalancer
  ports:
    - name: velocity
      port: 25565
      protocol: TCP
      targetPort: velocity
  selector:
    app: velocity
  loadBalancerIP: 192.168.0.230
